--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.43.1",
     "history": "^5.3.0",
     "morphdom": "^2.7.2",
-    "universal-router": "^9.2.0"
+    "universal-router": "^9.2.0",
+    "uuid": "^10.0.0"
   }
 }
