--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ionic/core": "^8.2.1",
     "@supabase/supabase-js": "^2.43.1",
     "history": "^5.3.0",
+    "js-confetti": "^0.12.0",
     "morphdom": "^2.7.2",
     "universal-router": "^9.2.0",
     "uuid": "^10.0.0"
