--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "history": "^5.3.0",
     "js-confetti": "^0.12.0",
     "morphdom": "^2.7.2",
+    "motion": "^10.18.0",
     "universal-router": "^9.2.0",
     "uuid": "^10.0.0"
   }
